fix: pagination alignment

--- a/src/assets/styles/components/_pagination.scss
+++ b/src/assets/styles/components/_pagination.scss
@@ -7,10 +7,12 @@
 
   &__item--next {
     text-align: right;
+    margin-right: -0.5rem;
   }
 
   &__item--prev {
     text-align: left;
+    margin-left: -0.5rem;
   }
 
   &__link {
